--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -54,7 +54,6 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -198,3 +197,14 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+
+.mainimage {
+background-position: center;
+max-width: 100%;
+} 
+/* class for the image to adjust properties.*/
+
+.maindiv {
+    display: flex;
+}
+/* class for the div container to make it flex.*/
